--- a/.travis.yml
+++ b/.travis.yml
@@ -69,9 +69,9 @@ install:
     CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.18.0-rc4/cmake-3.18.0-rc4-Linux-x86_64.tar.gz"
     mkdir cmake && travis_retry wget --nocheck-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
     export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-  - pip install numpy
-  - pip install matplotlib
-  - pip install pandas
+  - pip3 install numpy
+  - pip3 install matplotlib
+  - pip3 install pandas
 
 script:
   - /usr/bin/$(printenv COMPILER) --version
