--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,13 @@ environment:
     - gen: "MinGW"
     - gen: "MSVC"
 
+clone_script:
+  - cmd: >-
+      git clone -q --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+      && cd %APPVEYOR_BUILD_FOLDER%
+      && git checkout -qf %APPVEYOR_REPO_COMMIT%
+      && git submodule update --init --recursive
+
 install:
   - pip install numpy --user
   - python -m pip install -U matplotlib --user
