--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ addons:
       - llvm-toolchain-trusty-5.0
       - llvm-toolchain-trusty-6.0
     packages:
-      ["ruby-full", "python3"]
-      
+      ["ruby-full", "python3.8", "python3.8-dbg", "python3.8-dev"]
+
 compiler: clang
 os: linux
 
