--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,9 @@ install:
   - python -m pip install -U matplotlib --user
   - pip install pandas --user
 
+before_build:
+  - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
+
 build_script:
   - echo "Debug"
   - build.bat --build_type=Debug --compiler=%gen%
