--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ matrix:
 install:
   - |
     CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.18.0-rc4/cmake-3.18.0-rc4-Linux-x86_64.tar.gz"
-    mkdir cmake && travis_retry wget --nocheck-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
     export PATH=${DEPS_DIR}/cmake/bin:${PATH}
   - pip3 install numpy
   - pip3 install matplotlib
