--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-dist: trusty
 sudo: false
+dist: trusty
 language: cpp
 
 notifications:
@@ -19,7 +19,7 @@ addons:
       - llvm-toolchain-trusty-5.0
       - llvm-toolchain-trusty-6.0
     packages:
-      ["ruby-full", "python3.8", "python3.8-dbg", "python3.8-dev", "python3-pip"]
+      ["ruby-full", "python3", "python3-pip"]
 
 compiler: clang
 os: linux
@@ -64,14 +64,16 @@ matrix:
           packages: ["clang-5.0", "g++-6-multilib", "libc6-dbg", "libc6-dbg:i386", "linux-libc-dev", "linux-libc-dev:i386", "g++-6"]
           sources: *apt_sources
 
+before_install:
+  - pip3 install numpy
+  - pip3 install matplotlib
+  - pip3 install pandas
+
 install:
   - |
     CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.18.0-rc4/cmake-3.18.0-rc4-Linux-x86_64.tar.gz"
     mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
     export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-  - pip3 install numpy
-  - pip3 install matplotlib
-  - pip3 install pandas
 
 script:
   - /usr/bin/$(printenv COMPILER) --version
