--- a/.travis.yml
+++ b/.travis.yml
@@ -71,10 +71,10 @@ before_install:
   - pip3 install pandas
 
 install:
-  - |
-    CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.18.0-rc4/cmake-3.18.0-rc4-Linux-x86_64.tar.gz"
-    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-    export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+  - wget --no-check-certificate --quiet https://github.com/Kitware/CMake/releases/download/v3.18.0-rc4/cmake-3.18.0-rc4-Linux-x86_64.tar.gz
+  - tar xzf cmake-3.18.0-rc4-Linux-x86_64.tar.gz
+  - mv cmake-3.18.0-rc4-Linux-x86_64 cmake
+  - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
 
 script:
   - /usr/bin/$(printenv COMPILER) --version
