--- a/.travis.yml
+++ b/.travis.yml
@@ -69,18 +69,13 @@ before_install:
   - pip3 install numpy
   - pip3 install matplotlib
   - pip3 install pandas
-
-install:
   - sudo apt remove --purge --auto-remove cmake
   - version=3.17
   - build=3
-  - wget https://cmake.org/files/v$version/cmake-$version.$build.tar.gz
-  - tar -xzvf cmake-$version.$build.tar.gz
-  - cd cmake-$version.$build/
-  - ./bootstrap
-  - make -j$(nproc)
-  - sudo make install
-  - cd ..
+  - wget https://cmake.org/files/v$version/cmake-$version.$build-Linux-x86_64.sh
+  - sudo mkdir /opt/cmake
+  - sudo sh cmake-$version.$build-Linux-x86_64.sh --prefix=/opt/cmake
+  - sudo ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake
 
 script:
   - /usr/bin/$(printenv COMPILER) --version
