--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 dist: trusty
 language: cpp
 
@@ -24,7 +23,7 @@ addons:
 compiler: clang
 os: linux
 
-matrix:
+jobs:
   include:
     # GCC 7
     - env: COMPILER=g++-7
@@ -69,13 +68,16 @@ before_install:
   - pip3 install numpy
   - pip3 install matplotlib
   - pip3 install pandas
-  - sudo apt remove --purge --auto-remove cmake
-  - version=3.17
-  - build=3
-  - wget https://cmake.org/files/v$version/cmake-$version.$build-Linux-x86_64.sh
-  - sudo mkdir /opt/cmake
-  - sudo sh cmake-$version.$build-Linux-x86_64.sh --prefix=/opt/cmake
-  - sudo ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake
+  - set -e
+  - CMAKE_VERSION=3.16.2
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+      CMAKE_URL="https://cmake.org/files/v${CMAKE_VERSION%.*}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz"
+      echo CMAKE_URL=${CMAKE_URL}
+      mkdir cmake-${CMAKE_VERSION} && travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake-${CMAKE_VERSION}
+      export PATH=${PWD}/cmake-${CMAKE_VERSION}/bin:${PATH}
+    fi
+    cmake --version
 
 script:
   - /usr/bin/$(printenv COMPILER) --version
