--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,11 +19,10 @@ install:
   - cmd: C:\Python38-x64\Scripts\pip.exe install numpy
   - cmd: C:\Python38-x64\Scripts\pip.exe install matplotlib
   - cmd: C:\Python38-x64\Scripts\pip.exe install pandas
-  - cmd: dir C:\Python38-x64 # TODO
-  - cmd: dir C:\Python38-x64\Scripts # TODO
 
 before_build:
   - cmd: set PATH=%PATH:C:\Program Files\Git\usr\bin;=% 
+  - cmd: set PATH=C:\Python38-x64;%PATH%
 
 build_script:
   - cmd: echo "Debug"
