--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ os: linux
 jobs:
   include:
     # GCC 7
-    - env: COMPILER=g++-7
+    - env: CXX=g++-7 CC=gcc-7
       compiler: gcc
       addons: &gcc7
         apt:
@@ -34,7 +34,7 @@ jobs:
           sources: *apt_sources
 
     # GCC 8
-    - env: COMPILER=g++-8
+    - env: CXX=g++-8 CC=gcc-8
       compiler: gcc
       addons: &gcc8
         apt:
@@ -42,25 +42,11 @@ jobs:
           sources: *apt_sources
 
     # GCC 9
-    - env: COMPILER=g++-9
+    - env: CXX=g++-9 CC=gcc-9
       compiler: gcc
       addons: &gcc9
         apt:
           packages: ["g++-9",     "g++-9-multilib",   "libc6-dbg", "libc6-dbg:i386", "linux-libc-dev", "linux-libc-dev:i386"]
-          sources: *apt_sources
-          
-    # Clang 4.0
-    - env: COMPILER=clang++-4.0
-      addons: &clang40
-        apt:
-          packages: ["clang-4.0", "g++-6-multilib", "libc6-dbg", "libc6-dbg:i386", "linux-libc-dev", "linux-libc-dev:i386", "g++-6"]
-          sources: *apt_sources
-
-    # Clang 5.0
-    - env: COMPILER=clang++-5.0
-      addons: &clang50
-        apt:
-          packages: ["clang-5.0", "g++-6-multilib", "libc6-dbg", "libc6-dbg:i386", "linux-libc-dev", "linux-libc-dev:i386", "g++-6"]
           sources: *apt_sources
 
 before_install:
