Update Python code
Ignore PyCharm generated files in Git.
Have format.sh format Python according to PEP8 with an ident_width of 4
to have PyCharm not complain anymore.
Try to scale the x-axis of the Python generated plot.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/c,c++,cmake,linux,windows,vim,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,c++,cmake,linux,windows,vim,visualstudiocode
 
@@ -205,4 +204,8 @@ ruby/.idea
 
 # MinGW distribution
 mingw_dist
+
+# PyCharm generated files
+mogasens_plotter/.idea
+mogasens_plotter/venv
 
