--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "external/goto-ruby"]
 	path = external/goto-ruby
 	url = https://github.com/CppPhil/goto-ruby.git
+[submodule "external/ruby_progress_bar"]
+	path = external/ruby_progress_bar
+	url = https://github.com/paul/progress_bar
