Basic counting project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,4 +43,6 @@ add_subdirectory(external/scnlib)
 
 add_subdirectory(csv_lib)
 add_subdirectory(fix_csv)
+add_subdirectory(counting)
 add_subdirectory(feature_extraction)
+
