--- a/counting/CMakeLists.txt
+++ b/counting/CMakeLists.txt
@@ -7,12 +7,10 @@ set(LIB_SOURCES src/f.cpp)
 
 add_library(${LIB_NAME} OBJECT ${LIB_HEADERS} ${LIB_SOURCES})
 
-target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads 
-                                         csv_lib)
+target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads csv_lib)
 
-target_include_directories(
-  ${LIB_NAME}
-  PUBLIC ${mogasens_csv_SOURCE_DIR}/counting/include)
+target_include_directories(${LIB_NAME}
+                           PUBLIC ${mogasens_csv_SOURCE_DIR}/counting/include)
 
 # APPLICATION
 set(APP_NAME counting_app)
