--- a/feature_extraction/CMakeLists.txt
+++ b/feature_extraction/CMakeLists.txt
@@ -1,11 +1,11 @@
-# OBJECT LIBRARY
+# STATIC LIBRARY
 set(LIB_NAME feature_extraction_lib)
 
 set(LIB_HEADERS include/f.hpp)
 
 set(LIB_SOURCES src/f.cpp)
 
-add_library(${LIB_NAME} OBJECT ${LIB_HEADERS} ${LIB_SOURCES})
+add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
 target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads scn::scn csv_lib)
 
