--- a/fix_csv/CMakeLists.txt
+++ b/fix_csv/CMakeLists.txt
@@ -1,4 +1,4 @@
-# OBJECT LIBRARY
+# STATIC LIBRARY
 set(LIB_NAME fix_mogasens_csv_lib)
 
 set(LIB_HEADERS include/remove_zeros_from_field.hpp include/columns.hpp
@@ -7,7 +7,7 @@ set(LIB_HEADERS include/remove_zeros_from_field.hpp include/columns.hpp
 set(LIB_SOURCES src/remove_zeros_from_field.cpp
                 src/delete_non_bosch_sensors.cpp)
 
-add_library(${LIB_NAME} OBJECT ${LIB_HEADERS} ${LIB_SOURCES})
+add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
 target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads fmt::fmt)
 
