Add count.sh & count.bat to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ script:
   - ./test.sh --build_type=Debug
   - ./fix_csvs.sh --build_type=Debug
   - ./generate_images.sh
+  - ./count.sh --build_type=Debug
   - ./clean.sh
   - printf "\n\n"
   # Release
@@ -78,5 +79,6 @@ script:
   - ./build.sh --build_type=Release
   - ./test.sh --build_type=Release
   - ./fix_csvs.sh --build_type=Release
+  - ./count.sh --build_type=Release
   - ./generate_images.sh
 
