Namespace the csv_lib include path

--- a/csv_lib/CMakeLists.txt
+++ b/csv_lib/CMakeLists.txt
@@ -2,15 +2,15 @@
 set(LIB_NAME csv_lib)
 
 set(LIB_HEADERS
-    include/channel.hpp
-    include/column.hpp
-    include/data_point.hpp
-    include/data_set.hpp
-    include/error.hpp
-    include/exception.hpp
-    include/read_csv_file.hpp
-    include/sensor.hpp
-    include/to_string.hpp)
+    include/cl/channel.hpp
+    include/cl/column.hpp
+    include/cl/data_point.hpp
+    include/cl/data_set.hpp
+    include/cl/error.hpp
+    include/cl/exception.hpp
+    include/cl/read_csv_file.hpp
+    include/cl/sensor.hpp
+    include/cl/to_string.hpp)
 
 set(LIB_SOURCES
     src/channel.cpp
@@ -25,13 +25,18 @@ add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
 target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads fmt::fmt)
 
+target_include_directories(${LIB_NAME}
+                           INTERFACE ${mogasens_csv_SOURCE_DIR}/csv_lib/include)
+
 target_include_directories(
   ${LIB_NAME}
-  PUBLIC ${mogasens_csv_SOURCE_DIR}/csv_lib/include
-         ${mogasens_csv_SOURCE_DIR}/external/philslib/include
+  PUBLIC ${mogasens_csv_SOURCE_DIR}/external/philslib/include
          ${mogasens_csv_SOURCE_DIR}/external/csv-parser/single_include
          ${mogasens_csv_SOURCE_DIR}/external/tl/include
          ${mogasens_csv_SOURCE_DIR}/external/expected/include
          ${mogasens_csv_SOURCE_DIR}/external/optional/include)
+
+target_include_directories(
+  ${LIB_NAME} PRIVATE ${mogasens_csv_SOURCE_DIR}/csv_lib/include/cl)
 
 add_subdirectory(test)
