Migrate runAboveThreshold out of main

--- a/counting/CMakeLists.txt
+++ b/counting/CMakeLists.txt
@@ -1,10 +1,11 @@
 # STATIC LIBRARY
 set(LIB_NAME counting_lib)
 
-set(LIB_HEADERS include/above_threshold.hpp include/percentage_of.hpp
-                include/is_relevant.hpp)
+set(LIB_HEADERS include/above_threshold.hpp include/is_relevant.hpp
+                include/percentage_of.hpp include/run_above_threshold.hpp)
 
-set(LIB_SOURCES src/above_threshold.cpp src/is_relevant.cpp)
+set(LIB_SOURCES src/above_threshold.cpp src/is_relevant.cpp src/main.cpp
+                src/run_above_threshold.cpp)
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
