--- a/counting/CMakeLists.txt
+++ b/counting/CMakeLists.txt
@@ -1,11 +1,14 @@
 # STATIC LIBRARY
 set(LIB_NAME counting_lib)
 
-set(LIB_HEADERS include/above_threshold.hpp include/is_relevant.hpp
-                include/percentage_of.hpp include/run_above_threshold.hpp)
+set(LIB_HEADERS
+    include/above_threshold.hpp include/average_comparison_value_calculator.hpp
+    include/is_relevant.hpp include/percentage_of.hpp
+    include/run_above_threshold.hpp)
 
-set(LIB_SOURCES src/above_threshold.cpp src/is_relevant.cpp src/main.cpp
-                src/run_above_threshold.cpp)
+set(LIB_SOURCES
+    src/above_threshold.cpp src/average_comparison_value_calculator.cpp
+    src/main.cpp src/run_above_threshold.cpp)
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
