--- a/feature_extraction/CMakeLists.txt
+++ b/feature_extraction/CMakeLists.txt
@@ -7,7 +7,7 @@ set(LIB_SOURCES src/f.cpp)
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
-target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads scn::scn csv_lib)
+target_link_libraries(${LIB_NAME} PUBLIC scn::scn csv_lib)
 
 target_include_directories(
   ${LIB_NAME} PUBLIC ${mogasens_csv_SOURCE_DIR}/feature_extraction/include)
