Shut up compiler with CL_UNREACHABLE

--- a/csv_lib/CMakeLists.txt
+++ b/csv_lib/CMakeLists.txt
@@ -11,7 +11,8 @@ set(LIB_HEADERS
     include/cl/read_csv_file.hpp
     include/cl/s2n.hpp
     include/cl/sensor.hpp
-    include/cl/to_string.hpp)
+    include/cl/to_string.hpp
+    include/cl/unreachable.hpp)
 
 set(LIB_SOURCES
     src/channel.cpp
