--- a/csv_lib/CMakeLists.txt
+++ b/csv_lib/CMakeLists.txt
@@ -25,15 +25,15 @@ set(LIB_SOURCES
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
-target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads fmt::fmt)
+target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads fmt::fmt
+                                         CppPhil::philslib)
 
 target_include_directories(${LIB_NAME}
                            INTERFACE ${mogasens_csv_SOURCE_DIR}/csv_lib/include)
 
 target_include_directories(
   ${LIB_NAME}
-  PUBLIC ${mogasens_csv_SOURCE_DIR}/external/philslib/include
-         ${mogasens_csv_SOURCE_DIR}/external/csv-parser/single_include
+  PUBLIC ${mogasens_csv_SOURCE_DIR}/external/csv-parser/single_include
          ${mogasens_csv_SOURCE_DIR}/external/tl/include
          ${mogasens_csv_SOURCE_DIR}/external/expected/include
          ${mogasens_csv_SOURCE_DIR}/external/optional/include)
