--- a/.gitignore
+++ b/.gitignore
@@ -173,17 +173,9 @@ build
 docs
 
 # exported csv files
-resources/Felix/2020-07-02_11.17.39_out.csv
-resources/Felix/2020-07-02_12.50.00_out.csv
-resources/Felix/2020-07-02_13.00.09_out.csv
-resources/Marcelle/2020-07-02_14.59.59_out.csv
-resources/Marcelle/2020-07-02_15.13.22_out.csv
-resources/Marcelle/2020-07-02_15.31.36_out.csv
-resources/Marcelle/2020-07-02_15.39.22_out.csv
-resources/Mike/2020-07-02_14.07.33_out.csv
-resources/Mike/2020-07-02_14.14.32_out.csv
-resources/Mike/2020-07-02_14.20.28_out.csv
-resources/Mike/2020-07-02_14.38.40_out.csv
+resources/Felix/*_out*.csv
+resources/Marcelle/*_out*.csv
+resources/Mike/*_out*.csv
 
 # log files
 log.txt
@@ -206,10 +198,6 @@ python/.idea
 
 # MinGW distribution
 mingw_dist
-
-# PyCharm generated files
-python/mogasens_plotter/.idea
-python/mogasens_plotter/venv
 
 # __pycache__
 python/modules/__pycache__
