Seems to work on Microsoft Windows now

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,7 @@ script:
   - ./generate_images.sh
   - ./count.sh --build_type=Debug
   - ./filter.sh --filter_sample_count=125
+  - ./segment.sh --csv_file_path=resources/Mike/2020-07-02_14.38.40_out_avg_filter_125.csv --sensor=770 --channel=3 --segmentation_kind=both --window_size=51
   - ./clean.sh
   - printf "\n\n"
   # Release
@@ -82,4 +83,5 @@ script:
   - ./generate_images.sh
   - ./count.sh --build_type=Release
   - ./filter.sh --filter_sample_count=125
+  - ./segment.sh --csv_file_path=resources/Mike/2020-07-02_14.38.40_out_avg_filter_125.csv --sensor=770 --channel=3 --segmentation_kind=both --window_size=51
 
