--- a/fix_csv/CMakeLists.txt
+++ b/fix_csv/CMakeLists.txt
@@ -2,12 +2,18 @@
 set(LIB_NAME fix_mogasens_csv_lib)
 
 set(LIB_HEADERS
-    include/remove_zeros_from_field.hpp include/columns.hpp
-    include/delete_non_bosch_sensors.hpp include/adjust_hardware_timestamp.hpp)
+    include/adjust_hardware_timestamp.hpp
+    include/columns.hpp
+    include/convert_to_unix_line_endings.hpp
+    include/create_backup_file.hpp
+    include/delete_non_bosch_sensors.hpp
+    include/remove_zeros_from_field.hpp
+    include/restore_from_backup.hpp)
 
 set(LIB_SOURCES
-    src/remove_zeros_from_field.cpp src/delete_non_bosch_sensors.cpp
-    src/adjust_hardware_timestamp.cpp)
+    src/adjust_hardware_timestamp.cpp src/convert_to_unix_line_endings.cpp
+    src/create_backup_file.cpp src/delete_non_bosch_sensors.cpp
+    src/remove_zeros_from_field.cpp src/restore_from_backup.cpp)
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
