--- a/fix_csv/test/CMakeLists.txt
+++ b/fix_csv/test/CMakeLists.txt
@@ -3,7 +3,7 @@ include(GoogleTest)
 set(TEST_NAME fmc_test)
 
 set(TEST_SOURCES main.cpp remove_zeros_from_field_test.cpp
-                 adjust_hardware_timestamp_test.cpp columns_test.cpp)
+                 adjust_hardware_timestamp_test.cpp)
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
 
