--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "external/goto-ruby"]
 	path = external/goto-ruby
 	url = https://github.com/CppPhil/goto-ruby.git
+[submodule "external/fmtlib"]
+	path = external/fmtlib
+	url = https://github.com/fmtlib/fmt.git
