--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,4 +46,5 @@ add_subdirectory(external/philslib)
 add_subdirectory(csv_lib)
 add_subdirectory(fix_csv)
 add_subdirectory(counting)
+add_subdirectory(compare_segmentation)
 add_subdirectory(feature_extraction)
