--- a/compare_segmentation/CMakeLists.txt
+++ b/compare_segmentation/CMakeLists.txt
@@ -1,10 +1,12 @@
 # STATIC LIBRARY
 set(LIB_NAME compare_segmentation_lib)
 
-set(LIB_HEADERS include/log_files.hpp include/paths.hpp
-                include/data_set_info.hpp)
+set(LIB_HEADERS
+    include/data_set_info.hpp include/filter_kind.hpp include/log_files.hpp
+    include/log_info.hpp include/paths.hpp include/segmentation_kind.hpp)
 
-set(LIB_SOURCES src/log_files.cpp)
+set(LIB_SOURCES src/filter_kind.cpp src/log_files.cpp src/log_info.cpp
+                src/segmentation_kind.cpp)
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
